# cpuminer-zcash

./: Makefile.am  README.md  configure.ac  cpu-miner.cpp  elist.h  miner.h  sha2.cpp  util.cpp
equihash/: equihash.cpp  equihash.h
